# studica_vmxpi_ros2

./: .flake8  .gitignore  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  package.xml  studica_vmxpi_ros2.xml  vmxpi_ros2.xml
.githooks/: pre-commit
.github/workflows/: profile-validation.yml  ros-ci.yml
bringup/config/: diffbot_controllers.yaml  robot_controllers.yaml  slam_toolbox_mapper_params.yaml  ydlidar_x2_hw.yaml
bringup/config/profile_template/: README.md  robot_controllers.yaml  robot_profile.yaml
bringup/config/profiles/class_2wd/: robot_profile.yaml
bringup/config/profiles/class_4wd/: robot_controllers.yaml  robot_profile.yaml
bringup/config/profiles/class_mecanum/: robot_controllers.yaml  robot_profile.yaml
bringup/config/profiles/class_omni/: robot_controllers.yaml  robot_profile.yaml
bringup/config/profiles/training_2wd/: robot_controllers.yaml  robot_profile.yaml
bringup/config/profiles/training_4wd/: robot_controllers.yaml  robot_profile.yaml
bringup/launch/: _launch_gz.py  _launch_helpers.py  _launch_sensors.py  bringup.launch.py  camera_hw.launch.py  diffbot.launch.py  diffbot_gazebo_classic.launch.py  diffbot_gz_sim.launch.py  lidar_hw.launch.py  nav2_mapping.launch.py  nav2_mapping_gz_sim.launch.py  nav2_navigation.launch.py  nav2_navigation_gz_sim.launch.py  nav2_navigation_hw.launch.py  profile_validation.py  robot_bringup.launch.py  robot_gazebo_classic.launch.py  robot_gz_sim.launch.py  start_patrolling.launch.py
description/diffbot/rviz/: diffbot.rviz
description/diffbot/urdf/: diffbot_description.urdf.xacro
description/gazebo/: diffbot.gazebo.xacro  robot.gazebo.xacro
description/gazebo/worlds/: office_map.world
description/gz/: diffbot.gz.xacro  robot.gz.xacro
description/gz/worlds/: diff_drive_world.sdf  maze_world.sdf  office_map.sdf
description/meshes/sensors/: 3d_depth_camera.dae  micro_lidar.dae
description/meshes/wheels/: 76249RW.dae  drive_wheel.dae  mecanum_left_wheel.dae  mecanum_right_wheel.dae  omni_wheel_v2.dae
description/robot/rviz/: nav2_navigation.rviz  robot.rviz  robot2.rviz  robot_nav.rviz
description/robot/urdf/: robot_description.urdf.xacro
description/ros2_control/: diffbot.ros2_control.xacro  robot.ros2_control.xacro
description/urdf/: diffbot.urdf.xacro  robot.urdf.xacro
docs/: ARCHITECTURE.md  LAUNCH_MIGRATION.md  PROFILE_AUTHORING.md  ROS2_TRAINING.md
hardware/: diffbot_system.cpp  sim_system.cpp  titan_system.cpp  vmx_system.cpp
hardware/include/studica_vmxpi_ros2/: diffbot_system.hpp  robot_system.hpp  titan_system.hpp  vmx_system.hpp
hardware/include/vmxpi_ros2/: titan_system.hpp
maps/: my_map.pgm  my_map.yaml  office_map.pgm  office_map.yaml
scripts/: check_project.sh  create_profile.sh  install_git_hooks.sh  motor_smoke_test.sh  validate_profiles.py
src/: imu_topic_relay.cpp  nav2_topic_bridge.cpp  patrol.cpp  scan_frame_relay.cpp  topic_adapter_node.cpp
