<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vmxpi_ros2</name>
  <version>0.0.0</version>
  <description>Demo package of `vmxpi_ros2` simulation with Stdica Robot and VMXPI based on ros2_control.</description>

  <maintainer email="denis.stogl@stoglrobotics.de">Dr.-Ing. Denis Štogl</maintainer>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="christoph.froehlich@ait.ac.at">Christoph Froehlich</maintainer>
  <maintainer email="alshamsi.mohammad@gmail.com">Mohammad Alshamsi</maintainer>

  <author email="denis.stogl@stoglrobotics.de">Dr.-Ing. Denis Štogl</author>
  <author email="christoph.froehlich@ait.ac.at">Christoph Froehlich</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>ros2_control</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>diff_drive_controller</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>studica_drivers</depend>



  <depend>backward_ros</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>rviz2</exec_depend>
 
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
